@@ -1,3 +1,8 @@
+2006-04-25  David Reveman  <davidr@novell.com>
+
+	* src/paint.c (paintScreen): Only paint windows that have been 
+	damaged.
+
 2006-04-24  Dan Winship  <danw@novell.com>
 
 	* plugins/scale.c: 
